new users being sent to database, but some fields are empty

--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Keep Up</title>
 </head>
-<body>
+<body ng-app="KeepUp">
+    <h1>Keep Up Capstone</h1>
+
+    <div ng-view></div>
+
+    <!-- dependencies -->
+    <script src="angular/angular.min.js"></script>
+    <script src="angular-route/angular-route.min.js"></script>
+    <script src="app.js"></script>
+    <!-- factories -->
+    <script src="factories/authFactory.js"></script>
+    <!-- controllers -->
+    <script src="controllers/authCtrl.js"></script>
     
 </body>
 </html>
