nav bar appearing

--- a/client/index.html
+++ b/client/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Keep Up</title>
+    <link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.min.css">
+
 </head>
 <body ng-app="KeepUp">
-    <h1>Keep Up Capstone</h1>
 
+    <div ng-include="'partials/nav.html'"></div>
     <div ng-view></div>
 
+    <script src="jquery/dist/jquery.min.js"></script>
+    <script src="bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- dependencies -->
     <script src="angular/angular.min.js"></script>
     <script src="angular-route/angular-route.min.js"></script>
@@ -19,6 +23,8 @@
     <script src="factories/authFactory.js"></script>
     <!-- controllers -->
     <script src="controllers/authCtrl.js"></script>
+    <script src="controllers/navCtrl.js"></script>
+    <script src="controllers/occasionsCtrl.js"></script>
     
 </body>
 </html>
