--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,8 @@
     <script src="controllers/authCtrl.js"></script>
     <script src="controllers/navCtrl.js"></script>
     <script src="controllers/occasionCtrl.js"></script>
+    <script src="controllers/individualOccasionCtrl.js"></script>
+    
     
 </body>
 </html>
