user able to add occasion and purchase

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Keep Up</title>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Courgette|Glegoo|Marck+Script|Philosopher" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Courgette|Glegoo|Marck+Script|Philosopher|Yellowtail" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.min.css">
 
